--- a/Audacia.Quest/Audacia.Quest/wwwroot/index.html
+++ b/Audacia.Quest/Audacia.Quest/wwwroot/index.html
@@ -42,6 +42,11 @@
             onResize();
         };
 
+        window.onmousedown = (e) => {
+            console.log(e);
+            game.instance.invokeMethodAsync('OnMouseDown');
+        };
+
         window.initCanvas = (instance) => {
             var canvasContainer = document.getElementById('canvasContainer'),
                 canvases = canvasContainer.getElementsByTagName('canvas') || [];
@@ -59,6 +64,11 @@
                 };
                 window.game.canvas.onblur = (e) => {
                     window.game.canvas.focus();
+                };
+
+                window.game.canvas.onmousedown = (e) => {
+                    console.log(e);
+                    game.instance.invokeMethodAsync('OnMouseDown');
                 };
                 window.game.canvas.tabIndex = 0;
                 window.game.canvas.focus();
