--- a/Audacia.Quest/Audacia.Quest/wwwroot/index.html
+++ b/Audacia.Quest/Audacia.Quest/wwwroot/index.html
@@ -13,16 +13,13 @@
 
 <body>
     <div id="app">Loading...</div>
-
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/Blazor.Extensions.Canvas/blazor.extensions.canvas.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
     <script>
+        GetBoundingClientRect = (element, parm) => { return element.getBoundingClientRect(); };
+
         function gameLoop(timeStamp) {
             window.requestAnimationFrame(gameLoop);
             game.instance.invokeMethodAsync('GameLoop');
@@ -57,7 +54,8 @@
                 window.game.canvas.onkeyup = (e) => {
                     game.instance.invokeMethodAsync('OnKeyUp', e.keyCode);
                 };
-                window.game.canvas.onblur = (e) => {e
+                window.game.canvas.onblur = (e) => {
+                    e
                     window.game.canvas.focus();
                 };
                 window.game.canvas.onmousedown = (e) => {
